--- a/build_spec_oracle_graalvm_jdk17.yaml
+++ b/build_spec_oracle_graalvm_jdk17.yaml
@@ -7,7 +7,7 @@ env:
   exportedVariables:
     - BUILDRUN_HASH
   variables:
-    "JAVA_HOME" : "/usr/lib64/graalvm/graalvm22-ee-java17"
+    "JAVA_HOME" : "/usr/lib64/graalvm/graalvm-java17"
     # PATH is a reserved variable and cannot be defined as a variable.
     # However, PATH can be changed in a build step and the change is visible in subsequent steps.
 steps:
@@ -19,9 +19,9 @@ steps:
       echo "BUILDRUN_HASH: " $BUILDRUN_HASH
 
   - type: Command
-    name: "Install GraalVM 22.x Native Image for Java17"
+    name: "Install Oracle GraalVM for JDK 17 (Native Image and JDK)"
     command: |
-      yum -y install graalvm22-ee-17-native-image
+      yum -y install graalvm-17-native-image
   - type: Command
     name: "Set PATH Variable"
     command: |
